# gf3

./: README.md  gf3_serial.py
gf3_bringup/: CMakeLists.txt  package.xml
gf3_bringup/config/: gf3.rviz  gf3_controllers.yaml  laser_filter_angular.yaml  mapper_params_online_async.yaml  nav2_params.yaml  test_goal_publishers_config.yaml
gf3_bringup/include/: RMDX.h  RMDX.hpp  can_interface.hpp  connect_robot.hpp
gf3_bringup/launch/: forward_test_goal_launch.py  gf3.launch.py  joint_trajectory_controller.launch.py  laser_filter_launch.py  mecanum_launch.py  mecanum_nav_launch.py  nav_with_slam.launch.py  navigation_launch.py  rplidar_launch.py  test.launch.py  test_forward_position_controller.launch.py  test_joint_trajectory_controller.launch.py  tf.launch.py
gf3_bringup/src/: RMD_parser.cpp  can_interface.cpp  connect_robot.cpp
gf3_description/: CMakeLists.txt  package.xml
gf3_description/config/: gf3.rviz  joint_names_gf3.yaml  joint_names_gf3_description.yaml
gf3_description/launch/: display.launch  gazebo.launch  load_launch.py
gf3_description/meshes/: base_link.STL  elbow.STL  lower.STL  shoulder_1.STL  shoulder_2.STL  shoulder_3.STL  upper_arm.STL  uppper_arm.STL
gf3_description/urdf/: gf3.csv  gf3.urdf  gf3.xacro  gf3_temp_arm_core.xacro  ros2_control.xacro
gf3_hardware/: CMakeLists.txt  gf3_hardware.xml  package.xml
gf3_hardware/include/: RMDX.h
gf3_hardware/include/gf3_hardware/: CanBridge.hpp  MoteusAPI.h  gf3_hardware_interface.hpp  hw_can_bridge.hpp  mecanum_control.hpp  myactuator.hpp
gf3_hardware/src/: CanBridge.cpp  MoteusAPI.cpp  RMD_parser.cpp  gf3_hardware_interface.cpp  hw_can_bridge.cpp  mecanum_control.cpp  myactuator.cpp
gf3_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
gf3_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  robot.ros2_control.xacro  robot.srdf  robot.urdf.xacro
gf3_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
